# skepu

./: .gitmodules
tc-programs/skepu-addition/: CMakeLists.txt  Makefile  my_thing.cpp  performance_test.sh  power_usage_tests.sh  smi-stuff.sh
tc-programs/skepu-addition/parallel/: my_thing  my_thing_precompiled.cu  skepu_skel_0_my_thing_precompiled_MapKernel_gemm_uf_notransa_notransb.cu  skepu_skel_1_my_thing_precompiled_MapKernel_gemv_uf_notrans_noconj.cu
tc-programs/skepu-addition/results/performance/: README.md
tc-programs/skepu-addition/results/performance/gemm/3070/: eval-perf-gemm-3070-cuda-1.csv  eval-perf-gemm-3070-cuda-10.csv  eval-perf-gemm-3070-cuda-100.csv  eval-perf-gemm-3070-hybrid-128-1.csv  eval-perf-gemm-3070-hybrid-128-10.csv  eval-perf-gemm-3070-hybrid-128-100.csv  eval-perf-gemm-3070-hybrid-32-1.csv  eval-perf-gemm-3070-hybrid-32-10.csv  eval-perf-gemm-3070-hybrid-32-100.csv  eval-perf-gemm-3070-hybrid128-1.csv  eval-perf-gemm-3070-hybrid128-10.csv  eval-perf-gemm-3070-hybrid128-100.csv  eval-perf-gemm-3070-hybrid2-1.csv  eval-perf-gemm-3070-hybrid2-10.csv  eval-perf-gemm-3070-hybrid2-100.csv  eval-perf-gemm-3070-hybrid32-1.csv  eval-perf-gemm-3070-hybrid32-10.csv  eval-perf-gemm-3070-hybrid32-100.csv  eval-perf-gemm-3070-tc-1.csv  eval-perf-gemm-3070-tc-10.csv  eval-perf-gemm-3070-tc-100.csv  results-cuda-1.txt  results-cuda-10.txt  results-cuda-100.txt  results-hybrid-gemm-v2-1.txt  results-hybrid-gemm-v2-10.txt  results-hybrid-gemm-v2-100.txt  results-tc-1.txt  results-tc-10.txt  (+1 more)
tc-programs/skepu-addition/results/power/: README.md
(+151 files in other folders)
